--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -23,9 +23,11 @@ find_package( PythonLibs REQUIRED )
 include_directories( ${PYTHON_INCLUDE_DIRS} )
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/../src )
 
-set(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_SOURCE_DIR}/pyinverter)
 set_source_files_properties(inverter_wrapper.i PROPERTIES CPLUSPLUS ON)
 set(CMAKE_SWIG_FLAGS "-I${CMAKE_CURRENT_SOURCE_DIR}/../swig")
 swig_add_module(inverter_wrapper python ${CMAKE_CURRENT_SOURCE_DIR}/inverter_wrapper.i)
 swig_link_libraries(inverter_wrapper inverter ${PYTHON_LIBRARIES})
-install(TARGETS ${SWIG_MODULE_inverter_wrapper_REAL_NAME} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/pyinverter)
+install(TARGETS ${SWIG_MODULE_inverter_wrapper_REAL_NAME} 
+	    DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/pyinverter)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/inverter_wrapper.py 
+	    DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/pyinverter)
