add typemap and tests for std vector inputs

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,5 @@
 add_library(inverter inverter.cpp)
+
+add_executable(testInverter test_inverter.cpp)
+target_link_libraries(testInverter inverter)
+install(TARGETS testInverter DESTINATION bin)
