install shared library

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_library(inverter inverter.cpp)
+add_library(inverter SHARED inverter.cpp)
+install(TARGETS inverter DESTINATION lib)
 
 add_executable(testInverter test_inverter.cpp)
 target_link_libraries(testInverter inverter)
