--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,10 @@ python:
 before_install:
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake .. -DCMAKE_INSTALL_PREFIX=../install
 
 script:
+  - export "LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/home/travis/build/rdeits/swig-eigen-numpy/install/lib"
   - make
   - make install
   - cd ../python
