--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ python:
   - '3.4'
 
 before_install:
+  - swig -version
   - mkdir build
   - cd build
   - cmake .. -DCMAKE_INSTALL_PREFIX=../install
